<resources>
    <string name="app_name">小莫App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">请输入您的帐号</string>
    <string name="prompt_password">请输入6–12位的密码</string>
    <string name="action_sign_in">立即登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登录密码太短</string>
    <string name="error_invalid_email">这个账号是无效的</string>
    <string name="error_invalid_password">这个密码太短了</string>
    <string name="confirm">确认密码</string>
    <string name="action_settings">设置</string>
    <string name="xiaomo">小莫</string>
    <string name="project">项目</string>
    <string name="work">工作</string>
    <string name="user_name">小莫</string>
    <string name="setting">设置</string>
    <string name="message">这里是标题</string>
    <string name="message_remind">消息提醒</string>
    <string name="message_content">韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫韩媒：中方报复萨德力度升级 韩企在华受重挫</string>
    <string name="message_time">15分钟前</string>
    <string name="click_login">点击登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="no_accounts">还没有帐号？</string>
    <string name="index_content">こちらえ　どうぞ</string>
    <string name="other_login_way">用其他方式登录</string>
    <string name="quit_login">退出登录</string>
    <string name="about_us">关于我们</string>
    <string name="update_password">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="work_time">2017–01–10 15:35</string>
    <string name="love_count">2141人收录</string>
    <string name="open_message_info">您己开启消息提醒</string>
    <string name="close_message_info">您己关闭消息提醒</string>
    <string name="clear_cache_finish">己清除缓存</string>
    <string name="temperatureStr">温度：</string>
    <string name="acount_info">帐号信息</string>
    <string name="person_archives">个人档案</string>
    <string name="friend">我的好友</string>
    <string name="achievement">成  就</string>
    <string name="exit_login">退出登录</string>
    <string name="check_update">检查更新</string>
    <string name="new_version">v1.2.5</string>
    <string name="new_version_text">new</string>
    <string name="trash_count">5.6M</string>
    <string name="version_info">己是最新版本</string>


</resources>
