<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">


    <info.xiaomo.app.widget.RoundImageView
        android:id="@+id/id_login_logo"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_60"
        android:src="@drawable/avatar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/lightgray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColorHint="@color/lightgray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/login_button"
            android:text="@string/action_sign_in"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_gravity="center"
        android:gravity="center">

        <View
            android:id="@+id/id_line_left"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_1"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@color/lightgray" />

        <TextView
            android:id="@+id/id_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_login_way"
            android:textColor="@color/gray" />

        <View
            android:id="@+id/id_line_right"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@color/lightgray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_50">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/share_icon_qq" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/share_icon_wechat" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/share_icon_sinaweibo_a" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_accounts"
        android:textColor="@color/white" />

</LinearLayout>
