<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_160"
    android:background="@drawable/border"
    android:orientation="horizontal"
    android:padding="@dimen/dp_10">

    <ImageView
        android:id="@+id/id_work_item_icon"
        android:layout_width="@dimen/dp_160"
        android:layout_height="@dimen/dp_160"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_toEndOf="@id/id_work_item_icon"
        android:orientation="vertical"
        android:padding="@dimen/dp_5">

        <TextView
            android:id="@+id/id_work_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:gravity="center_vertical"
            android:lineSpacingMultiplier="@dimen/line_height"
            android:text="@string/message"
            android:textColor="@color/rosybrown"
            android:textSize="@dimen/sp_20" />


        <TextView
            android:id="@+id/id_work_item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_vertical"
            android:lineSpacingMultiplier="@dimen/line_height"
            android:maxLines="3"
            android:minLines="3"
            android:text="@string/message_content"
            android:textColor="@color/msg_color"
            android:textSize="@dimen/sp_15" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_love_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_weight="1"
                android:lineSpacingMultiplier="@dimen/line_height"
                android:text="@string/love_count"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/id_work_item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_weight="1"
                android:gravity="end"
                android:lineSpacingMultiplier="@dimen/line_height"
                android:paddingEnd="@dimen/dp_5"
                android:paddingStart="@dimen/dp_5"
                android:text="@string/work_time"
                android:textColor="@color/gray" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>