<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/id_tab_me"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical">

        <!-- 登录状态下的UI布局 -->
        <RelativeLayout
            android:id="@+id/id_personal_center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white"
            android:padding="@dimen/dp_5"
            android:visibility="gone">

            <ImageView
                android:id="@+id/id_friend_circle_image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_marginStart="@dimen/dp_10"
                android:contentDescription="@string/message_remind"
                android:src="@drawable/avatar" />


            <TextView
                android:id="@+id/id_text_my_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_toEndOf="@id/id_friend_circle_image"
                android:gravity="center_vertical"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <ImageView
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_keyboard_arrow_right_red_700_24dp" />

        </RelativeLayout>

        <!-- 未登录状态下的UI布局，默认是未登录状态下的UI布局 -->
        <LinearLayout
            android:id="@+id/id_not_login_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:orientation="vertical"
            android:background="@color/lightgray"
            android:visibility="visible">

            <info.xiaomo.app.widget.RoundImageView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="center"
                android:src="@drawable/avatar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/click_login" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/id_photo_image"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp_10"
                    android:src="@drawable/akc" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />
            </LinearLayout>

            <include layout="@layout/line" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>